source/sass/blocks/page-footer.scss
.footer {
  margin-top: auto;
  padding: 35px 0 42px;
  color: $palette-brightcontrast;
  background-color: $palette-prime;

  @media (min-width: $small-desktop-width) {
    padding: 96px 0 27px;
  }

  @media (min-width: $desktop-width) {
    padding: 145px 0 78px;
  }
}

.footer a {
  text-decoration: none;
}

.footer .wrapper {
  display: flex;
  flex-flow: column nowrap;

  @media (min-width: $small-desktop-width) {
    flex-flow: row wrap;
    justify-content: space-between;
  }
}

.footer__container {
  order: 1;
  display: flex;
  flex-flow: column nowrap;
  margin-bottom: 17px;

  @media (min-width: $small-desktop-width) {
    flex-basis: 100%;
    flex-flow: row wrap;
    justify-content: space-between;
    margin-bottom: 25px;
  }

  @media (min-width: $desktop-width) {
    flex-basis: 82.8125%;
  }
}

.footer__logo-box {
  flex-basis: 100%;
  order: 0;
  display: block;
  padding: 5px;
  margin: 0 auto 22px;

  @media (min-width: $small-desktop-width) {
    display: inline-flex;
    margin: 0 auto 11px 0;
  }

  @media (min-width: $desktop-width) {
    margin-bottom: 25px;
  }
}

.footer__logo img {
  filter: invert(1);
}

.footer__tel-box {
  order: 0;
  display: inline-block;
  margin: 0 auto 36px;

  @media (min-width: $small-desktop-width) {
    margin: 10px auto 50px 0;
  }

  @media (min-width: $desktop-width) {
    flex-basis: 100%;
    margin: 0 auto 55px 0;
  }
}

.footer__tel {
  padding: 15px 0;
  color: $palette-accent;
  font-size: 30px;
  line-height: 32px;
  font-weight: 800;
  transition: color 0.42s;

  @media (min-width: $small-desktop-width) {
    padding: 10px 0;
    font-size: 50px;
    line-height: 55px;
  }

  @media (min-width: $desktop-width) {
    padding: 10px 0;
    font-size: 50px;
    line-height: 55px;
  }

  &:hover {
    color: $palette-brightcontrast;
  }
}

.footer__about {
  text-align: center;

  @include font-primary($weight: 800, $line-height: 29px, $color: $palette-brightcontrast);

  @media (min-width: $small-desktop-width) {
    flex-basis: 31.55%;
    padding: 7px 0;
    text-align: start;
  }

  @media (min-width: $desktop-width) {
    padding: 0;
    flex-basis: 37.736%;
  }
}

.footer__adress {
  margin: 0 0 9px;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  font-size: 16px;
  font-style: normal;

  @media (min-width: $small-desktop-width) {
    align-items: normal;
    margin: 0 0 21px;
  }

  @media (min-width: $desktop-width) {
    flex-flow: row wrap;
    align-items: normal;
    gap: 48px;
    margin: 0 0 51px;
  }
}

.footer__adress > p {
  margin: 0 0 27px;

  @media (min-width: $small-desktop-width) {
    margin: 0 0 28px;
  }

  @media (min-width: $desktop-width) {
    width: 45%;
    margin: 0;
  }

  & span {
    display: block;
    margin: 0;
    font-weight: 300;
  }
}

.footer__email {
  @include font-primary($weight: 800, $line-height: 29px, $color: $palette-brightcontrast);

  display: inline-block;
  margin: 0;
  padding: 5px 0 0;
  border-bottom: 1px solid;
  transition: color 0.55s;
  font-size: 16px;

  &:hover {
    color: $palette-accent;
  }
}

.footer .footer__nav {
  display: none;

  @media (min-width: $small-desktop-width) {
    align-self: flex-start;
    display: flex;
    flex-basis: 65.73%;
    margin: 3px 0;
  }

  @media (min-width: $desktop-width) {
    flex-basis: 37.736%;
    align-self: auto;
    margin: 8px 0;
  }
}

.footer-nav__link {
  transition: color 0.55s;

  &:hover {
    color: $palette-brightcontrast;
  }
}

.footer__socials {
  @include list;

  order: 1;
  padding: 27px 22px;
  margin: 0 0 9px;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;

  @media (min-width: $small-desktop-width) {
    order: 0;
    flex-basis: 31.55%;
    justify-content: flex-start;
    align-items: flex-start;
    margin: 0;
    padding: 8px 0;
  }

  @media (min-width: $desktop-width) {
    order: 1;
    flex-basis: 13.55%;
    justify-content: space-between;
    padding: 0 2px;
  }
}

.socials__item {
  margin: 0;

  @media (min-width: $small-desktop-width) {
    margin: 0 39.5px 40px 0;
  }

  @media (min-width: $desktop-width) {
    margin: 0;
  }
}

.footer .socials__link {
  display: inline-block;
  width: 46px;
  height: 46px;
  background: transparent center no-repeat;
  transition: background 0.42s;

  &--vk {
    background-image: url("../img/logo-vk.svg");

    &:hover {
    background-image: url("../img/logo-vk--y.svg");
  }
  }

  &--tg {
    background-image: url("../img/logo-tg.svg");

    &:hover {
    background-image: url("../img/logo-tg--y.svg");
  }
  }

  &--ytb {
    background-image: url("../img/logo-ytb.svg");

    &:hover {
    background-image: url("../img/logo-ytb--y.svg");
  }
  }

  &--wa {
    background-image: url("../img/logo-wa.svg");

    &:hover {
    background-image: url("../img/logo-wa--y.svg");
  }
  }

  &--disabled {
    opacity: 0.55;
    pointer-events: none;
  }
}

.footer__copyrights {
  order: 1;
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 14px;
  color: $palette-dim;
  text-align: center;

  @media (min-width: $small-desktop-width) {
    position: relative;
    top: -58px;
    margin-left: auto;
    padding: 0;
    flex-basis: 31.55%;
    text-align: start;
  }

  @media (min-width: $desktop-width) {
    position: static;
    flex-basis: 31.25%;
  }
}

.footer__copyrights p {
  margin: 0;
  padding: 0;
}

.footer__copyrights a {
  text-decoration-line: underline;
}

